--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -29,7 +29,7 @@
         background: rgba(0,0,0,0.9);
         position: absolute;
         top: 0;
-        left: -100;
+        left: -100%;
         z-index: -3;
         transition: 0.3s;
     }
