--- a/src/components/SkillContentStyles.css
+++ b/src/components/SkillContentStyles.css
@@ -41,3 +41,45 @@
         
     }
 }
+
+.githubContainer{
+    border: 1px solid #333;
+    height: auto;
+    width: 100%;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.calenderDiv>h1{
+    text-decoration: underline;
+    text-align: center;
+    margin-top: 20px;
+}
+.calender{
+    display: flex;
+    justify-content: center;
+    border: 1px solid #333;
+    margin-top: 20px;
+    border-radius: 10px;
+    width: 70%;
+    padding: 20px;
+    margin-left: 15%;
+    color: white;
+}
+.statsDiv>h1{
+    text-decoration: underline;
+    text-align: center;
+    margin-top: 20px;
+}
+.stats{
+    display: flex;
+    justify-content: center;
+    border: 1px solid #333;
+    /* padding-left: 20px; */
+    margin-top: 20px;
+    border-radius: 10px;
+    width: 70%;
+    padding: 20px;
+    margin-left: 15%;
+}
